<resources>
    <string name="app_name" translatable="false">au520670 Movies</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title">Title</string>
    <string name="knap">Back</string>
    <string name="exit">Exit</string>
    <string name="watched">Watched</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="comment">Comment</string>
    <string name="rateing">Rating</string>
    <string name="urrate">Your Rating</string>
    <string name="plot">Plot</string>
    <string name="nocomment">No Comment Yet</string>
    <string name="add">Add</string>
    <string name="addmov">Write Title</string>
    <string name="noteAdd">Add a new title:</string>
    <string name="delete">Delete</string>
    <string name="yourrating">Your Rating</string>
    <string name="notseen">Suggested movie:</string>
    <string name="wasadd">was added</string>
    <string name="wasdel">was deleted</string>
</resources>

